Make benchmark a standalone module (#1043)
Change-Id: I3b169b2c27239ae57be09ca63cb24e032d32e4f6